--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,18 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+
+    <!-- ToolBar Calendar Options-->
+    <string-array name="spinner_list_item_array">
+        <item>Month</item>
+        <item>Week</item>
+        <item>Day</item>
+        <item>Today</item>
+    </string-array>
 </resources>
